# StanfordcppLib

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  app.cbp  cmake_install.cmake  io1  io2  main  main.cpp  main.h  reference_semantic  reference_semantic1  reference_semantic2  string1
src/: a.out  hello.cpp  io1.cpp  io1.out  io2.cpp  name1.txt  ref1.cpp  ref2.cpp  string1.cpp
src/files/: name1.txt
